@@ -16,33 +16,36 @@
 
 package io.prometheus.jmx.test.support;
 
+import static java.lang.String.format;
+
 import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Locale;
-import java.util.Objects;
-import java.util.function.Predicate;
 
 /** Class to implement JavaDockerImages */
 public final class JavaDockerImages {
 
-    private static final String DOCKER_IMAGES_CONFIGURATION = "java.docker.images";
+    private static final String ALL = "ALL";
 
-    private static final String DOCKER_IMAGES_RESOURCE = "/java-docker-images.txt";
+    private static final String DOCKER_IMAGES_CONFIGURATION = "java.docker.images";
 
     private static final String SMOKE_TEST_DOCKER_IMAGES_RESOURCE =
             "/smoke-test-java-docker-images.txt";
 
-    private static String[] ALL_DOCKER_IMAGE_NAMES;
+    private static final List<String> SMOKE_TEST_DOCKER_IMAGES =
+            Collections.unmodifiableList(load(SMOKE_TEST_DOCKER_IMAGES_RESOURCE));
 
-    private static String[] SMOKE_TEST_DOCKER_IMAGES;
+    private static final String ALL_DOCKER_IMAGES_RESOURCE = "/java-docker-images.txt";
 
-    /** Predicate to accept all Docker image names */
-    public static final Predicate<String> ACCEPT_ALL = name -> true;
+    private static final List<String> ALL_DOCKER_IMAGE_NAMES =
+            Collections.unmodifiableList(load(ALL_DOCKER_IMAGES_RESOURCE));
 
     /** Constructor */
     private JavaDockerImages() {
@@ -50,104 +53,100 @@ public final class JavaDockerImages {
     }
 
     /**
-     * Method to get Collection of all Docker image names
-     *
-     * @return the Collection of Docker image names
-     */
-    public static Collection<String> names() {
-        return names(ACCEPT_ALL);
-    }
-
-    /**
      * Method to get List of Docker image names filtered by a Predicate
      *
-     * @param predicate predicate
      * @return the List of Docker image names
      */
-    public static Collection<String> names(Predicate<String> predicate) {
-        Objects.requireNonNull(predicate);
-
-        synchronized (JavaDockerImages.class) {
-            if (ALL_DOCKER_IMAGE_NAMES == null) {
-                ALL_DOCKER_IMAGE_NAMES = load(DOCKER_IMAGES_RESOURCE);
-            }
-            if (SMOKE_TEST_DOCKER_IMAGES == null) {
-                SMOKE_TEST_DOCKER_IMAGES = load(SMOKE_TEST_DOCKER_IMAGES_RESOURCE);
-            }
-        }
-
-        String[] dockerImageNames;
-
-        String dockerImageNameValue =
+    public static Collection<String> names() {
+        String configurationValues =
                 System.getenv(
                         DOCKER_IMAGES_CONFIGURATION.toUpperCase(Locale.ENGLISH).replace('.', '_'));
 
-        if (dockerImageNameValue != null) {
-            dockerImageNameValue = dockerImageNameValue.trim();
-            if (dockerImageNameValue.isBlank()) {
-                dockerImageNameValue = null;
-            }
+        if (configurationValues == null || configurationValues.trim().isEmpty()) {
+            configurationValues = System.getProperty(DOCKER_IMAGES_CONFIGURATION);
         }
 
-        if (dockerImageNameValue == null) {
-            dockerImageNameValue = System.getProperty(DOCKER_IMAGES_CONFIGURATION);
-            if (dockerImageNameValue != null) {
-                if (dockerImageNameValue.isBlank()) {
-                    dockerImageNameValue = null;
-                }
-            }
+        if (configurationValues == null || configurationValues.trim().isEmpty()) {
+            return SMOKE_TEST_DOCKER_IMAGES;
         }
 
-        if (dockerImageNameValue == null) {
-            dockerImageNames = SMOKE_TEST_DOCKER_IMAGES;
-        } else if (dockerImageNameValue.equalsIgnoreCase("ALL")) {
-            dockerImageNames = ALL_DOCKER_IMAGE_NAMES;
-        } else {
-            dockerImageNames = dockerImageNameValue.split("\\s+");
+        if (configurationValues.trim().equalsIgnoreCase(ALL)) {
+            return ALL_DOCKER_IMAGE_NAMES;
         }
 
-        Collection<String> dockerImageNamesCollection = new ArrayList<>();
-        for (String dockerImageName : dockerImageNames) {
-            if (predicate.test(dockerImageName)) {
-                dockerImageNamesCollection.add(dockerImageName);
-            }
-        }
-
-        return Collections.unmodifiableCollection(dockerImageNamesCollection);
+        return Collections.unmodifiableList(toList(configurationValues));
     }
 
     /**
      * Method to load the list of Docker image names from a resource
      *
      * @param resource resource
-     * @return the String array of lines
+     * @return the List of lines
      */
-    private static String[] load(String resource) {
-        Collection<String> dockerImageNames = new ArrayList<>();
-        BufferedReader bufferedReader;
+    private static List<String> load(String resource) {
+        List<String> lines = new ArrayList<>();
+
+        InputStream inputStream = null;
+        BufferedReader bufferedReader = null;
 
         try {
+            inputStream = JavaDockerImages.class.getResourceAsStream(resource);
+
+            if (inputStream == null) {
+                throw new IOException("Resource not found");
+            }
+
             bufferedReader =
-                    new BufferedReader(
-                            new InputStreamReader(
-                                    JavaDockerImages.class.getResourceAsStream(resource),
-                                    StandardCharsets.UTF_8));
+                    new BufferedReader(new InputStreamReader(inputStream, StandardCharsets.UTF_8));
 
             while (true) {
                 String line = bufferedReader.readLine();
-
                 if (line == null) {
                     break;
                 }
-
                 if (!line.trim().isEmpty() && !line.trim().startsWith("#")) {
-                    dockerImageNames.add(line.trim());
+                    lines.add(line.trim());
                 }
             }
 
-            return dockerImageNames.toArray(new String[0]);
-        } catch (IOException e) {
-            throw new RuntimeException("Exception reading resource " + DOCKER_IMAGES_RESOURCE, e);
+            return lines;
+        } catch (Throwable t) {
+            throw new RuntimeException(format("Exception reading resource [%s]", resource), t);
+        } finally {
+            if (bufferedReader != null) {
+                try {
+                    bufferedReader.close();
+                } catch (Throwable t) {
+                    // DO NOTHING
+                }
+            }
+
+            if (inputStream != null) {
+                try {
+                    inputStream.close();
+                } catch (Throwable t) {
+                    // DO NOTHING
+                }
+            }
         }
+    }
+
+    /**
+     * Method to split a String on whitespace and return a List of Strings
+     *
+     * @param string string
+     * @return a List of Strings
+     */
+    private static List<String> toList(String string) {
+        List<String> list = new ArrayList<>();
+
+        String[] strings = string.split("\\s+");
+        for (String s : strings) {
+            if (!s.trim().isEmpty()) {
+                list.add(s.trim());
+            }
+        }
+
+        return list;
     }
 }
